--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Russell",
   "license": "ISC",
   "dependencies": {
-  "@whiskeysockets/baileys": "github:ds6/meta",
+    "@whiskeysockets/baileys": "^6.7.9",
     "awesome-phonenumber": "^5.10.0",
     "axios": "^0.24.0",
     "cfonts": "^2.10.0",
@@ -25,9 +25,8 @@
     "acrcloud": "^1.4.0",
     "formdata-node": "^6.0.3",
     "hispamemes": "^1.0.7",
-    "canvas": "^3.0.0-rc2", 
+    "canvas": "^2.11.2",
     "jimp": "^0.16.13",
-    "child_process": "^1.0.2",
     "form-data-encoder": "^4.0.2",
     "figlet": "^1.8.0",
     "google-tts-api": "^2.0.2",
