--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Russell",
   "license": "ISC",
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
+    "@whiskeysockets/baileys": "github:ds6/bails",
     "awesome-phonenumber": "^5.10.0",
     "axios": "^0.24.0",
     "cfonts": "^2.10.0",
@@ -21,12 +21,14 @@
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "youtubei": "^1.3.4",
+    "@hapi/boom": "^10.0.1",
     "@hiudyy/ytdl": "^0.2.3",
     "acrcloud": "^1.4.0",
     "formdata-node": "^6.0.3",
     "hispamemes": "^1.0.7",
-    "canvas": "^2.11.2",
+    "canvas": "^3.0.0-rc2",
     "jimp": "^0.16.13",
+    "child_process": "^1.0.2",
     "form-data-encoder": "^4.0.2",
     "figlet": "^1.8.0",
     "google-tts-api": "^2.0.2",
@@ -45,7 +47,9 @@
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "util": "^0.12.4",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "better-sqlite3": "^8.5.3",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.0"
